<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardSelectionActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_padding"
            android:text="@string/card"
            android:textAppearance="?android:textAppearanceMedium"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ivCardOne"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/backcard_red" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ivCardTwo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/backcard_red" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ivCardThree"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/backcard_red" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ivCardFour"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/backcard_red" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ivCardFive"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/backcard_red" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/textview_padding"
            android:text="@string/enteryourcardvalues"
            android:textAppearance="?android:textAppearanceMedium"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_padding"
            android:layout_marginTop="@dimen/textview_padding"
            android:id="@+id/atcCardOne"
            android:hint="@string/cardnum_one"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_radius"
            android:layout_marginStart="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_padding"
            android:id="@+id/atcCardTwo"
            android:hint="@string/cardnum_two"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_radius"
            android:layout_marginStart="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_padding"
            android:id="@+id/atcCardThree"
            android:hint="@string/cardnum_three"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_radius"
            android:layout_marginStart="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_padding"
            android:id="@+id/atcCardFour"
            android:hint="@string/cardnum_four"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_padding"
            android:id="@+id/atcCardFive"
            android:hint="@string/cardnum_five"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_padding"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/button_radius"
            android:onClick="checkcards"
            android:text="@string/checkcards" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>